--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Black Monday Industry</title>
-  <link rel="stylesheet" href="./css/reset.css" />
-  <link rel="stylesheet" href="./css/style.css" />
-  <script src="./js/form.js" defer></script>
-  <script src="./js/faq.js" defer></script>
+  <link rel="stylesheet" href="reset.css" />
+  <link rel="stylesheet" href="style.css" />
+  <script src="form.js" defer></script>
+  <script src="faq.js" defer></script>
 </head>
 
 <body>
@@ -23,7 +23,7 @@
       
       <li><a href="#contact">contact</a></li>
       <li>
-        <a href="#"><img src="assets/searchblack.png" width="134" height="354" /></a>
+        <a href="#"><img src="searchblack.png" width="134" height="354" /></a>
       </li>
     </ul>
   </nav>
@@ -58,7 +58,7 @@
     </section>
     <section id="portfolio">
       <article class="portfolio-item">
-        <a href="#" rel="https://discord.com/invite/dydQ35sDa9"><img src="assets/discord.png" width="704px" height="397px"
+        <a href="#" rel="https://discord.com/invite/dydQ35sDa9"><img src="discord.png" width="704px" height="397px"
             alt="foto of discord logo" title="Discord logo" /></a>
             <br/>
           <h2>Public discord</h2>
@@ -69,7 +69,7 @@
   
       </article>
       <article class="portfolio-item">
-        <img src="assets/Vi.png" width="704px" height="397px"
+        <img src="Vi.png" width="704px" height="397px"
             alt="foto of vip discord logo" title="Discord" /></a>
             <br/>
             <h2>Vip Discord</h2>
