--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <h2>Contact info</h2>
         <p>BMI<br />Black monday Industry</p>
         <p>
-          email<a href="Black-monday-Industry@outlook.com"> mail@</a><br />
+          Black-monday-Industry@outlook.com
         </p>
         
       </article>
