--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </section>
     <section id="portfolio">
       <article class="portfolio-item">
-        <a href="#" rel="https://discord.com/invite/dydQ35sDa9"><img src="discord.png" width="704px" height="397px"
+        <a href="#" rel="https://discord.gg/qNv7fkjJ"><img src="discord.png" width="704px" height="397px"
             alt="foto of discord logo" title="Discord logo" /></a>
             <br/>
           <h2>Public discord</h2>
